--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -683,11 +683,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1056.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.2 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1058.3 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.7 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 B5 B1048.4',),\n",
+       " ('F9 B5 B1049.4',),\n",
+       " ('F9 B5 B1051.3',),\n",
+       " ('F9 B5 B1056.4',),\n",
+       " ('F9 B5 B1048.5',),\n",
+       " ('F9 B5 B1051.4',),\n",
+       " ('F9 B5 B1049.5',),\n",
+       " ('F9 B5 B1060.2 ',),\n",
+       " ('F9 B5 B1058.3 ',),\n",
+       " ('F9 B5 B1051.6',),\n",
+       " ('F9 B5 B1060.3',),\n",
+       " ('F9 B5 B1049.7 ',)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT BOOSTER_VERSION FROM SPACEXTBL WHERE PAYLOAD_MASS__KG_ = (SELECT MAX(PAYLOAD_MASS__KG_) FROM SPACEXTBL)"
    ]
@@ -706,11 +783,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>MONTH</th>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>Booster_Version</th>\n",
+       "            <th>Launch_Site</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>October</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>F9 v1.1 B1012</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>November</td>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>F9 v1.1 B1013</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>February</td>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>F9 v1.1 B1014</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>April</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>F9 v1.1 B1015</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>April</td>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>F9 v1.1 B1016</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>June</td>\n",
+       "            <td>Precluded (drone ship)</td>\n",
+       "            <td>F9 v1.1 B1018</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>December</td>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "            <td>F9 FT B1019</td>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('October', 'Failure (drone ship)', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n",
+       " ('November', 'Controlled (ocean)', 'F9 v1.1 B1013', 'CCAFS LC-40'),\n",
+       " ('February', 'No attempt', 'F9 v1.1 B1014', 'CCAFS LC-40'),\n",
+       " ('April', 'Failure (drone ship)', 'F9 v1.1 B1015', 'CCAFS LC-40'),\n",
+       " ('April', 'No attempt', 'F9 v1.1 B1016', 'CCAFS LC-40'),\n",
+       " ('June', 'Precluded (drone ship)', 'F9 v1.1 B1018', 'CCAFS LC-40'),\n",
+       " ('December', 'Success (ground pad)', 'F9 FT B1019', 'CCAFS LC-40')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT \\\n",
     "CASE \\\n",
@@ -729,7 +887,8 @@
     "LANDING_OUTCOME, \\\n",
     "BOOSTER_VERSION, \\\n",
     "LAUNCH_SITE \\\n",
-    "FROM SPACEXTBL"
+    "FROM SPACEXTBL \\\n",
+    "where date like '2015%'"
    ]
   },
   {
